init monsters and fixed spells + potions